src/unison/physfs-1.1.1/physfs.h


typedef unsigned int          PHYSFS_uint32;
typedef PHYSFS_uint32         PHYSFS_uint64;
typedef PHYSFS_sint32         PHYSFS_sint64;
typedef signed __int64        PHYSFS_sint64;
typedef unsigned __int64      PHYSFS_uint64;
typedef unsigned long long    PHYSFS_uint64;
typedef signed long long      PHYSFS_sint64;
typedef struct
{
    void *opaque;  
} PHYSFS_File;
__EXPORT__ int PHYSFS_init(const char *argv0);
__EXPORT__ int PHYSFS_deinit(void);
__EXPORT__ void PHYSFS_freeList(void *listVar);
__EXPORT__ const char *PHYSFS_getLastError(void);
__EXPORT__ const char *PHYSFS_getDirSeparator(void);
__EXPORT__ void PHYSFS_permitSymbolicLinks(int allow);
__EXPORT__ char **PHYSFS_getCdRomDirs(void);
__EXPORT__ const char *PHYSFS_getBaseDir(void);
__EXPORT__ const char *PHYSFS_getUserDir(void);
__EXPORT__ const char *PHYSFS_getWriteDir(void);
__EXPORT__ int PHYSFS_setWriteDir(const char *newDir);
__EXPORT__ int PHYSFS_addToSearchPath(const char *newDir, int appendToPath);
__EXPORT__ int PHYSFS_removeFromSearchPath(const char *oldDir);
__EXPORT__ char **PHYSFS_getSearchPath(void);
__EXPORT__ int PHYSFS_setSaneConfig(const char *organization,
                                    const char *appName,
                                    const char *archiveExt,
                                    int includeCdRoms,
                                    int archivesFirst);
__EXPORT__ int PHYSFS_mkdir(const char *dirName);
__EXPORT__ int PHYSFS_delete(const char *filename);
__EXPORT__ const char *PHYSFS_getRealDir(const char *filename);
__EXPORT__ char **PHYSFS_enumerateFiles(const char *dir);
__EXPORT__ int PHYSFS_exists(const char *fname);
__EXPORT__ int PHYSFS_isDirectory(const char *fname);
__EXPORT__ int PHYSFS_isSymbolicLink(const char *fname);
__EXPORT__ PHYSFS_sint64 PHYSFS_getLastModTime(const char *filename);
__EXPORT__ PHYSFS_File *PHYSFS_openWrite(const char *filename);
__EXPORT__ PHYSFS_File *PHYSFS_openAppend(const char *filename);
__EXPORT__ PHYSFS_File *PHYSFS_openRead(const char *filename);
__EXPORT__ int PHYSFS_close(PHYSFS_File *handle);
__EXPORT__ PHYSFS_sint64 PHYSFS_read(PHYSFS_File *handle,
                                     void *buffer,
                                     PHYSFS_uint32 objSize,
                                     PHYSFS_uint32 objCount);
__EXPORT__ PHYSFS_sint64 PHYSFS_write(PHYSFS_File *handle,
                                      const void *buffer,
                                      PHYSFS_uint32 objSize,
                                      PHYSFS_uint32 objCount);
__EXPORT__ int PHYSFS_eof(PHYSFS_File *handle);
__EXPORT__ PHYSFS_sint64 PHYSFS_tell(PHYSFS_File *handle);
__EXPORT__ int PHYSFS_seek(PHYSFS_File *handle, PHYSFS_uint64 pos);
__EXPORT__ PHYSFS_sint64 PHYSFS_fileLength(PHYSFS_File *handle);
__EXPORT__ int PHYSFS_setBuffer(PHYSFS_File *handle, PHYSFS_uint64 bufsize);
__EXPORT__ int PHYSFS_flush(PHYSFS_File *handle);